DBZ-6637 Support Geo types without srid